# AI-Copper

./: .gitignore  Cargo.toml  INSTALLATION.md  LICENSE  QUICKSTART.md  README.md  build.rs  examples.md  functions.md  todo.md
benches/: ops_bench.rs
cpp/: CMakeLists.txt  lib.cpp
docs/: index.md
docs/docs_libtorch/1_tensor/: Tensors.md
examples/: advanced_features.rs  auto_download_demo.rs  basic_usage.rs  copper.crs
src/: lib.rs
src/tensor/: ffi.rs  operators.rs  tensor.rs
src/tensor_libortch/: ffi.rs  mod.rs  operators.rs  tensor.rs
src/tensor_tensorflow/: ffi.rs  mod.rs  optimizers.rs  tensors_flow.rs
src/unified/: tensor.rs
tests/: complex_ops.rs  string_roundtrip.rs  tensorflow_ops.rs  typed_roundtrip.rs
